# a-chat

./: README.md  a-chat.c.old  design.md
a-chat-cli/: CMakeLists.txt
a-chat-cli/src/: main.c
a-chat-lib/: CMakeLists.txt
a-chat-lib/include/: a-chat.h  log.h
a-chat-lib/include/client/: client.h
a-chat-lib/include/server/: server.h
a-chat-lib/src/: log.c
a-chat-lib/src/client/: client.c
a-chat-lib/src/server/: server.c
